add features for lead backend

--- a/serverless.yml
+++ b/serverless.yml
@@ -23,9 +23,7 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource:
-        - { "Fn::GetAtt": ["UsersTable", "Arn"] }
-        - { "Fn::GetAtt": ["EmailLeadTable", "Arn"] }
+      Resource: "*"
 
 plugins:
  - serverless-bundle # Package our functions with Webpack
@@ -44,9 +42,34 @@ functions:
       - http:
           path: /
           method: ANY
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Accept
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
       - http:
           path: /{proxy+}
           method: ANY
+          cors:
+            origin: '*' 
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Accept
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+  
+  inactiveLeadCrone: # Automatically release assignement if the user is Inactive for more than 120sec
+    handler: handler.RealeaseInProgressLead
+    events:
+      - schedule: cron(*/35 * * * ? *)
 
 resources:
   Resources:
@@ -69,10 +92,31 @@ resources:
         AttributeDefinitions:
           - AttributeName: emailLeadId
             AttributeType: S
+          - AttributeName: date
+            AttributeType: S
+          - AttributeName: status
+            AttributeType: S
+          - AttributeName: resolvingBy
+            AttributeType: S
+          - AttributeName: resolvedBy
+            AttributeType: S
         KeySchema:
           - AttributeName: emailLeadId
             KeyType: HASH
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
-        TableName: emailLead
+        TableName: emailLeads
+        GlobalSecondaryIndexes:
+          - IndexName: EmailLeadTableIndex
+            KeySchema:
+              - AttributeName: status
+                KeyType: HASH
+              - AttributeName: date
+                KeyType: RANGE
+            Projection:
+              ProjectionType: 'ALL'
+            ProvisionedThroughput:
+              ReadCapacityUnits: 1
+              WriteCapacityUnits: 1
+        
