--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "process emails",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/*.test.js --require esm"
   },
   "author": "",
   "license": "ISC",
@@ -12,17 +12,25 @@
     "serverless-apigw-binary": "^0.4.4",
     "serverless-bundle": "3.2.0",
     "serverless-dotenv-plugin": "^2.1.1",
-    "serverless-offline": "^5.3.3"
+    "serverless-offline": "^5.3.3",
+    "sinon": "^10.0.0"
   },
   "dependencies": {
     "aws-multipart-parser": "^0.2.1",
+    "babel-node": "0.0.1-security",
+    "bcryptjs": "^2.4.3",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "dynamodb": "^1.3.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.4.0",
+    "moment": "^2.29.1",
     "serverless-http": "^2.7.0",
     "uuid": "^8.3.2",
-    "jsonwebtoken": "^8.5.1",
     "validatorjs": "^3.22.1",
-    "winston": "^3.3.3",
-    "bcryptjs": "^2.4.3"
+    "winston": "^3.3.3"
   }
 }
